--- a/2.3.2.ipynb
+++ b/2.3.2.ipynb
@@ -1001,12 +1001,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsRegressor(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "          metric_params=None, n_jobs=1, n_neighbors=3, p=2,\n",
+       "          weights='uniform')"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg"
+   ]
   },
   {
    "cell_type": "code",
